--- a/Fyxme/Views/Shared/_Layout.cshtml
+++ b/Fyxme/Views/Shared/_Layout.cshtml
@@ -35,19 +35,19 @@
     
     <!-- Top Menu -->
     <div id="top_menu">
-        <div id="fyxme_logo"><a href="@Url.Content("~/Home")"><img src="@Url.Content("~/Content/Images/fyxmy_logo.svg")" width="160" height="67" border="0" alt="" /></a></div>
+        <div id="fyxme_logo"><a href="@Url.Content("~/")"><img src="@Url.Content("~/Content/Images/fyxmy_logo.svg")" width="160" height="67" border="0" alt="" /></a></div>
         <div id="options">
 
             <div class="desktop-only">
                 <div class="option"><a id="a1_how_it_works" name="a1_how_it_works" href="#how-it-works">HOW IT WORKS</a></div>
                 <div class="option"><a id="a1_why_use_fyxme" name="a1_why_use_fyxme" href="#why-use-fyxme">WHY USE FYXME</a></div>
                 <div class="option"><a id="a1_technicians" name="a1_technicians" href="#meet-our-technicians">TECHNICIANS</a></div>
-                <div class="blue">1-888-98-FYXME</div>
+                <div class="blue">1-888-983-9963</div>
                 <div class="get_started_box" onclick="$('#btn_get_started').click();">GET STARTED</div>
             </div>
 
             <div class="mobile-only">
-                <div class="blue" id="mobPhone">1-888-98-FYXME</div>
+                <div class="blue" id="mobPhone">1-888-983-9963</div>
                 <div class="option"><img id="btnMenuForMobile" src="@Url.Content("~/Content/Images/mob_menu.png")" width="34" height="21" /></div>
             </div>
 
@@ -78,8 +78,6 @@
                     <div class="footer-text">About Us</div>
                     <div class="footer-text">FAQs</div>
                     <div class="footer-text">Testimonials</div>
-                    <div class="footer-text">Contact Us</div>
-                    <div class="footer-text">Cities</div>
                 </div>
                 <div class="col-md-2">
                     <div class="footer-top-text">Legal</div>
@@ -92,9 +90,8 @@
                 </div>
                 <div class="col-md-2">
                     <div class="footer-top-text">Social</div>
-                    <div class="footer-text">Yelp</div>
+                    <!--<div class="footer-text">Yelp</div>//-->
                     <div class="footer-text">Facebook</div>
-                    <div class="footer-text">Twitter</div>
                 </div>
             </div>
             <div class="row">
