--- a/Fyxme/Views/Home/Index.cshtml
+++ b/Fyxme/Views/Home/Index.cshtml
@@ -255,18 +255,18 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="faq-img"><img src="@Url.Content("~/Content/Images/faq_repair_location_ico.png")" width="80" height="80" /></div>
-                            <h2 class="faq-subtitle">Will the car look brand new?</h2>
-                            <p class="faq-subtitle-text">The car will look as if the scratch, dent or ding never happened (unless told otherwise by the technician prior to fixing your car).</p>
+                            <h2 class="faq-subtitle">Where will the car technician repair my car?</h2>
+                            <p class="faq-subtitle-text">In your driveway or a garage near your home or work. If the job cannot be performed on site, our car technician will pick your car up and drop it back within 24 to 48 hours.</p>
                         </div>
                         <div class="col-md-4">
                             <div class="faq-img"><img src="@Url.Content("~/Content/Images/faq_job_done_ico.png")" width="80" height="80" /></div>
-                            <h2 class="faq-subtitle">Are the technicians qualified?</h2>
-                            <p class="faq-subtitle-text">We only work with professional car repair experts that provide high quality work.</p>
+                            <h2 class="faq-subtitle">When do I pay for the repair?</h2>
+                            <p class="faq-subtitle-text">You pay at the end once the job is completed.</p>
                         </div>
                         <div class="col-md-4">
                             <div class="faq-img"><img src="@Url.Content("~/Content/Images/free_schedule_ico.png")" width="80" height="80" /></div>
-                            <h2 class="faq-subtitle">Is there an additional fee for a technician to come to my location?</h2>
-                            <p class="faq-subtitle-text">No, our upfront pricing includes all fees.</p>
+                            <h2 class="faq-subtitle">How quickly can I get a car technician?</h2>
+                            <p class="faq-subtitle-text">The same day or next day based on the technicians’ availability.</p>
                         </div>
                     </div>
                     <div class="row">
@@ -312,27 +312,7 @@
 
             </div>
             <!-- End -->
-            <!-- Contact Us -->
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="contact-us">CONTACT US</div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-6">
-                        <img src="@Url.Content("~/Content/Images/iconography_05.png")" width="80" height="80" />
-                        <h2 class="subtitle_center">Phone</h2>
-                        <p class="subtitle_text_center">1-888-983-9963</p>
-                    </div>
-                    <div class="col-md-6">
-                        <img src="@Url.Content("~/Content/Images/thoughts_ico.png")" width="80" height="80" />
-                        <h2 class="subtitle_center">email</h2>
-                        <p class="subtitle_text_center">&nbsp;info@fyxme.com</p>
-                    </div>
-                </div>
-            </div>
-            <!-- End -->
+            
             <!-- Modal HTML embedded directly into document -->
             <!--<div id="ex1" style="display:none;">
                 <p>Thanks for clicking.  That felt good.  <a href="#" rel="modal:close">Close</a> or press ESC</p>
